--- a/PCA/PCA/Views/DailyReport/CreatePicture.cshtml
+++ b/PCA/PCA/Views/DailyReport/CreatePicture.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DailyReportId, "DailyReportId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DailyReportId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("DailyReportId", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
                 @Html.ValidationMessageFor(model => model.DailyReportId, "", new { @class = "text-danger" })
             </div>
         </div>
