--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -30,12 +30,12 @@
         <div class="row">
             <div id="Navigation" class="col-xs-12">
                 <div id="NavigationLinks" class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-xl-4">
-                    <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">DASHBOARD</span></a>
-                    <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">CONTRACTS</span></a>
-                    <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">BUDGETS</span></a>
-                    <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">INVOICE</span></a>
-                    <a href="/DailyReport/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">DAILY REPORT</span></a>
-                    <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">REPORTS</span></a>
+                    <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">Dashboard</span></a>
+                    <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">Contracts</span></a>
+                    <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">Budgets</span></a>
+                    <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">Invoices</span></a>
+                    <a href="/DailyReport/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">Daily Reports</span></a>
+                    <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">Reports</span></a>
                 </div>
 
                 <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
@@ -64,6 +64,7 @@
             
         </div>
 
+    <!--
         <div class="row">
             <a href="/Dashboard/Select">
                 <div id="Footer" class="col-xs-12">
@@ -78,7 +79,7 @@
                     }</p>
                 </div>
             </a>
-        </div>
+        </div>-->
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
