--- a/PCA/PCA/Views/Budget/Index.cshtml
+++ b/PCA/PCA/Views/Budget/Index.cshtml
@@ -1,10 +1,7 @@
-﻿@*@model IEnumerable<PCA.Models.Phase>*@
-@model IEnumerable<PCA.ViewModels.BudgetPhaseViewModel>
+﻿@model PCA.ViewModels.BudgetIndexViewModel
+
 @{
-    ViewBag.Title = "Index";
-}
-@section css {
-    <link rel="stylesheet" href="~/Content/Budget.css" />
+    ViewBag.Title = "Details";
 }
 @section sideNavBudgets
 {
@@ -16,82 +13,82 @@
     <script src="~/Scripts/PCA.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js"></script>
     <script src="~/Scripts/Budget.js"></script>
-    
 }
-<div class="col-xs-12 col-md-7">
-    <div class="panel panel-default panelShadow col-xs-12">
-        <div class="panel-heading col-xs-12">
-            <div class="headingElements col-xs-12">
-                <div class="col-xs-4">
-                    <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-sm">
-                        <span class="glyphicon glyphicon-menu-left"></span> Back
-                    </a>
-                </div>
-                <span class="headingText col-xs-4">Budget Summary</span>
+
+<div class="panel panel-default panelShadow col-xs-12">
+    <div class="panel-heading col-xs-12">
+        <div class="headingElements col-xs-12">
+            <div class="col-xs-4">
+                <a href="/Dashboard/Index/" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-menu-left"></span> Back
+                </a>
             </div>
-        </div>
-
-
-        <div class="panel-body">
-            <br /><br /><br />
-            Total Budgeted: @string.Format("{0:C}", @ViewBag.BudgetSummaryTotal)
-            <br />
+            <span class="headingText col-xs-4">Budget Summary</span>
         </div>
     </div>
 
 
-    <div class="panel panel-default panelShadow col-xs-12">
-        <div class="panel-heading col-xs-12">
-            <div class="headingElements col-xs-12">
-                <div class="col-xs-4">
-                    <a href="/Budget/Create" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus-sign"></span> New</a>
-                </div>
-                <span class="headingText col-xs-4">Select Phase</span>
+    <div class="panel-body">
+        <br /><br /><br />
+        Total Budgeted:
+        <br />
+    </div>
+</div>
+
+<div class="panel panel-default panelShadow col-xs-4">
+    <div class="panel-heading col-xs-12">
+        <div class="headingElements col-xs-12">
+            <div class="col-xs-4">
             </div>
+            <span class="headingText col-xs-4">Budget Summary</span>
         </div>
-        <div class="panel-body">
-            
-            <hr />
+    </div>
 
-            <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
-                <a id="LinkButton1" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> View</a>
-            </div>
 
-            <table id="table_id" class="display">
+    <div class="panel-body">
+        <br /><br /><br />
+
+        <!-- Daily Report DataTables -->
+        <div id="TableWrapper" class="col-xs-12">
+            <table id="Sort1" class="display col-xs-12 Sort1 table table-striped">
                 <thead>
                     <tr>
-                        <th>#</th>
+                        <th>Phase #</th>
                         <th>Name</th>
-                        <th>Total Budget</th>
+                        <th>Total</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var phase in Model)
-            {
-                        <tr class="LinkButton" data-link-button-1="/Budget/Phase/@phase.PhaseId">
-                            <td>@phase.PhaseNumber</td>
-                            <td>@phase.PhaseName</td>
-                            <td>@string.Format("{0:C}", @phase.TotalCost)</td>
+                    <!-- Daily Reports -->
+                        <tr class="LinkButton dailyReportRow">
+                            <td>5</td>
+                            <td>5</td>
+                            <td>5</td>
                         </tr>
-                    }
-
-
                 </tbody>
             </table>
         </div>
+
+        <br />
     </div>
 </div>
-<div class="col-xs-0 col-md-1"></div>
 
-<div class="panel panel-default panelShadow col-md-4">
-    <div class="panel-heading">
-        <h4>Analytics</h4>
-    </div>
-    <div class="panel-body">
-        <div class="col-xs-10 col-xs-offset-1">
-            <canvas id="budgetCanvas" width="400" height="300" data-site-total="@ViewBag.SiteTotal"
-                    data-equipment-total="@ViewBag.EquipmentTotal" data-building-total="@ViewBag.BuildingTotal"
-                    data-misc-total="@ViewBag.MiscTotal"></canvas>
+<div class="col-xs-1"></div>
+
+<div class="panel panel-default panelShadow col-xs-7">
+    <div class="panel-heading col-xs-12">
+        <div class="headingElements col-xs-12">
+            <div class="col-xs-4">
+            </div>
+            <span class="headingText col-xs-4">Budget Summary</span>
         </div>
     </div>
+
+
+    <div class="panel-body">
+        <br /><br /><br />
+        Total Budgeted:
+        <br />
+    </div>
 </div>
+
