--- a/PCA/PCA/Views/Budget/Index.cshtml
+++ b/PCA/PCA/Views/Budget/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PCA.ViewModels.BudgetIndexViewModel
+﻿@model IEnumerable<PCA.ViewModels.BudgetIndexViewModel>
 
 @{
     ViewBag.Title = "Details";
@@ -9,48 +9,27 @@
 }
 @section scripts
 {
-    <script src="~/Scripts/DataTablesCustomization.js"></script>
     <script src="~/Scripts/PCA.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js"></script>
     <script src="~/Scripts/Budget.js"></script>
 }
 
-<div class="panel panel-default panelShadow col-xs-12">
+
+<div class="panel panel-default panelShadow col-xs-12 col-md-4">
     <div class="panel-heading col-xs-12">
         <div class="headingElements col-xs-12">
             <div class="col-xs-4">
-                <a href="/Dashboard/Index/" class="btn btn-default btn-sm">
-                    <span class="glyphicon glyphicon-menu-left"></span> Back
-                </a>
+                <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
             </div>
-            <span class="headingText col-xs-4">Budget Summary</span>
+            <span class="headingText col-xs-4">Phases</span>
         </div>
     </div>
-
-
-    <div class="panel-body">
-        <br /><br /><br />
-        Total Budgeted:
-        <br />
-    </div>
-</div>
-
-<div class="panel panel-default panelShadow col-xs-4">
-    <div class="panel-heading col-xs-12">
-        <div class="headingElements col-xs-12">
-            <div class="col-xs-4">
-            </div>
-            <span class="headingText col-xs-4">Budget Summary</span>
-        </div>
-    </div>
-
-
     <div class="panel-body">
         <br /><br /><br />
 
         <!-- Daily Report DataTables -->
         <div id="TableWrapper" class="col-xs-12">
-            <table id="Sort1" class="display col-xs-12 Sort1 table table-striped">
+            <table id="" class="BudgetTable display col-xs-12 Sort1 table table-striped">
                 <thead>
                     <tr>
                         <th>Phase #</th>
@@ -60,12 +39,20 @@
                 </thead>
                 <tbody>
                     <!-- Daily Reports -->
-                        <tr class="LinkButton dailyReportRow">
-                            <td>5</td>
-                            <td>5</td>
-                            <td>5</td>
+
+                    @{
+                        var phase = Model.GroupBy(x => x.PhaseNumber).Select(x => x.First());
+                    }
+                    @foreach (var m in phase)
+                    {
+                        <tr id="selectPhaseRow" class="phaseRow" data-selectedPhase="@m.PhaseNumber">
+                            <td>@m.PhaseNumber</td>
+                            <td>@m.PhaseName</td>
+                            <td>@string.Format("{0:C}", @m.PhaseTotal)</td>
                         </tr>
+                    }
                 </tbody>
+
             </table>
         </div>
 
@@ -75,19 +62,53 @@
 
 <div class="col-xs-1"></div>
 
-<div class="panel panel-default panelShadow col-xs-7">
+<div class="panel panel-default panelShadow col-md-7 col-xs-12">
     <div class="panel-heading col-xs-12">
         <div class="headingElements col-xs-12">
             <div class="col-xs-4">
             </div>
-            <span class="headingText col-xs-4">Budget Summary</span>
+            <span class="headingText col-xs-4">Budget Items</span>
+            <div class="headingRight col-xs-4">
+                <a href="/Budget/Create" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span> New</a>
+            </div>
         </div>
     </div>
-
-
     <div class="panel-body">
-        <br /><br /><br />
-        Total Budgeted:
+        <br />
+        <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
+            <a id="LinkButton1" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> View</a>
+            <a id="LinkButton2" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+        </div>
+
+        
+
+        <!-- Daily Report DataTables -->
+        <div id="TableWrapper" class="col-xs-12">
+            <hr />
+            <table id="" class="BudgetTable display col-xs-12 Sort1 table table-striped">
+                <thead>
+                    <tr>
+                        <th>Total</th>
+                        <th>Description</th>
+                        <th>Sub Phase</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Daily Reports -->
+                    @foreach (var bud in Model)
+                    {
+                        <tr id="budgetRow" class="LinkButton budgetRow" data-phase="@bud.PhaseNumber" data-link-button-1="/Budget/Details/@bud.BudgetId" data-link-button-2="/Budget/Details/@bud.BudgetId">
+                            <td>@string.Format("{0:C}", @bud.BudgetTotal)</td>
+                            <td>@bud.BudgetDescription</td>
+                            <td>@bud.SubPhaseName</td>
+                            <td>@bud.Status</td>
+                        </tr>
+                    }
+                </tbody>
+
+            </table>
+        </div>
         <br />
     </div>
 </div>
