--- a/PCA/PCA/Views/DailyReport/CreatePicture.cshtml
+++ b/PCA/PCA/Views/DailyReport/CreatePicture.cshtml
@@ -1,21 +1,24 @@
 ﻿@model PCA.Models.DailyReportPicture
 
 @{
-    ViewBag.PanelTitle = "Create Daily Report";
+    ViewBag.PanelTitle = "Upload Picture";
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
+@section headerLeft
+{
+    <a href="/DailyReport/PictureIndex/@ViewBag.CurrentDailyReportId" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+}
 
+<br /><br /><br />
 
 @using(Html.BeginForm("CreatePicture", "DailyReport", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-        <a href="/DailyReport/PictureIndex/@ViewBag.CurrentDailyReportId" class="btn btn-default">Back</a>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.DailyReportId, "DailyReportId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DailyReportId, "Daily Report", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("DailyReportId", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
                 @Html.ValidationMessageFor(model => model.DailyReportId, "", new { @class = "text-danger" })
