--- a/PCA/PCA/Views/DailyReport/CreateWork.cshtml
+++ b/PCA/PCA/Views/DailyReport/CreateWork.cshtml
@@ -10,16 +10,18 @@
     sideNavItemSelected
 }
 
+@section headerLeft
+{
+    <a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+}
 
-
+<br /><br /><br />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.DailyReportId)
 
     <div class="form-horizontal">
-        <a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Summary, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -32,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Performance, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Performance, "--- Select Performance ---", htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.Performance, "Select Performance...", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Performance, "", new { @class = "text-danger" })
             </div>
         </div>
