--- a/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
+++ b/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
@@ -54,7 +54,7 @@
 
         <div class="panel-body">
 
-            <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
+            <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
                 <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
                 <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
                 <a id="LinkButton3" href="" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-eye-open"></span> View</a>
