--- a/PCA/PCA/Views/Contract/CreateBCO.cshtml
+++ b/PCA/PCA/Views/Contract/CreateBCO.cshtml
@@ -1,10 +1,13 @@
-﻿@model PCA.Models.Contract
+﻿@model PCA.ViewModels.BCOViewModel
 
 @{
     ViewBag.Title = "CreateBCO";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
-
+@section sideNavContracts
+{
+    sideNavItemSelected
+}
 <h2>CreateBCO</h2>
 <div class="col-xs-6">
     @using (Html.BeginForm())
@@ -14,11 +17,19 @@
         <div class="form-horizontal">
             <h4>Contract</h4>
             <hr />
+
+            @Html.HiddenFor(model => model.OwnerSigAccountId)
+            @Html.HiddenFor(model => model.ContractorSigAccountId)
+            @Html.HiddenFor(model => model.OwnerSignDate)
+            @Html.HiddenFor(model => model.ContractorSignDate)
+            @Html.HiddenFor(model => model.ContractBudgetChangeOrderId)
+            @Html.HiddenFor(model => model.BCOBudgetId)
+
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.ProjectId, "ProjectId", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control", @readonly="readonly" })
                     @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -26,7 +37,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ClientId, "ClientId", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("ClientId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownList("ClientId", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(model => model.ClientId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -34,48 +45,18 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ContractorId, "ContractorId", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("ContractorId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownList("ContractorId", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(model => model.ContractorId, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.OwnerSigAccountId, "OwnerSigAccountId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("OwnerSigAccountId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.OwnerSigAccountId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ContractorSigAccountId, "ContractorSigAccountId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("ContractorSigAccountId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.ContractorSigAccountId, "", new { @class = "text-danger" })
-                </div>
-            </div>
+           
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                     @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.OwnerSignDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.OwnerSignDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.OwnerSignDate, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ContractorSignDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ContractorSignDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ContractorSignDate, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -115,7 +96,7 @@
 <div class="panel panel-default col-xs-6">
     <div class="panel-heading">Current Budget</div>
     <div class="panel-body">
-
+        @ViewBag.ContractCurrentTotal
 
     </div>
     
