--- a/PCA/PCA/Content/Layout.css
+++ b/PCA/PCA/Content/Layout.css
@@ -12,7 +12,7 @@
 }
 
 .badge{
-    background-color: #333;
+    background-color: #1c2541;
 }
 
 .workflowTable, .workflowTable > tbody > tr > td {
