--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
         </div>
 
         <div id="BodyContainer" class="container-fluid">
-            <div class="row">
+            <div id="ContentRow" class="row">
                 <div id="Body" class="col-xs-12">
                     @RenderBody()
                 </div>
