--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -79,7 +79,7 @@
         <h4>Links</h4>
     </div>
     <div class="panel-body">
-
+        <a href="/Admin/Index">Admin</a>
     </div>
 </div>
 
@@ -88,6 +88,6 @@
         <h4>Change Log</h4>
     </div>
     <div class="panel-body">
-
+        
     </div>
 </div>
