--- a/PCA/PCA/Content/Layout.css
+++ b/PCA/PCA/Content/Layout.css
@@ -66,6 +66,11 @@
     padding-bottom: 8px;*/
 }
 
+
+#navbar:hover{
+    opacity: .4;
+}
+
 .panel-heading > .headingText{
     border-width: 5px;
     border-color: #333;
@@ -125,7 +130,7 @@
     background-color: #0967aa;
 }
 
-#CurrentUserText {
+.CurrentUserText {
     padding-top: 8px;
     padding-bottom: 8px;
     max-height: 35px;
@@ -259,4 +264,8 @@
     margin-left: 5%;
     margin-right: 5%;
     padding: 0px;
+}
+
+.textcenter{
+    text-align: center;
 }
