--- a/PCA/PCA/Views/Budget/Index.cshtml
+++ b/PCA/PCA/Views/Budget/Index.cshtml
@@ -16,7 +16,7 @@
 @section scripts
 {
     <script src="~/Scripts/PCA.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
     <script src="~/Scripts/Budget.js"></script>
 }
 
@@ -34,9 +34,26 @@
     </div>
     <div class="panel-body">
         <br />
+        <br />
+        <br />
+
+        <div class="well col-xs-12">
+            <div class="col-xs-12">
+                <div class="col-xs-4 text-center"></div>
+                <div class="col-xs-4"><b class="text-center col-xs-12">Budget Total: @ViewBag.budgetTotal.ToString("C")</b></div>
+                <div class="col-xs-4 text-center"></div>
+            </div>
+            <br />
+            <br />
+            <div class="col-xs-12 col-md-4 text-center"><u>Pending</u> <div class="text-center">@ViewBag.pendingTotal.ToString("C")</div></div>
+            <div class="col-xs-12 col-md-4 text-center"><u>Reviewed</u> <div class="text-center">@ViewBag.reviewedTotal.ToString("C")</div></div>
+            <div class="col-xs-12 col-md-4 text-center"><u>Approved</u> <div class="text-center">@ViewBag.approvedTotal.ToString("C")</div></div>
+        </div>
+
         <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
             <a id="LinkButton1" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> View</a>
             <a id="LinkButton2" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+            <a id="LinkButton3" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-sort"></span> Workflow</a>
         </div>
 
         
@@ -57,7 +74,8 @@
                     <!-- Daily Reports -->
                     @foreach (var bud in Model)
                     {
-                        <tr id="budgetRow" class="LinkButton budgetRow" data-phase="@bud.PhaseNumber" data-link-button-1="/Budget/Details/@bud.BudgetId" data-link-button-2="/Contract/CreateBCO/@bud.BudgetId">
+                        <tr id="budgetRow" class="LinkButton budgetRow" data-phase="@bud.PhaseNumber" data-link-button-1="/Budget/Details/@bud.BudgetId" data-link-button-2="/Contract/CreateBCO/@bud.BudgetId"
+                            data-link-button-3="/Budget/Workflow/@bud.BudgetId">
                             <td>@string.Format("{0:C}", @bud.BudgetTotal)</td>
                             <td>@bud.BudgetDescription</td>
                             <td>@bud.SubPhaseName</td>
@@ -121,13 +139,17 @@
     <div class="panel-heading col-xs-12">
         <div class="headingElements col-xs-12">
             <div class="col-xs-4">
-                <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
             </div>
-            <span class="headingText col-xs-4">Phases</span>
+            <span class="headingText col-xs-4">Data</span>
         </div>
     </div>
     <div class="panel-body">
-        Test
+        <div class="col-xs-12 col-md-10 col-md-offset-1">
+            <canvas id="budgetCanvas" width="400" height="250"
+                    data-status-total-pending="@ViewBag.pendingTotal"
+                    data-status-total-reviewed="@ViewBag.reviewedTotal"
+                    data-status-total-approved="@ViewBag.approvedTotal"></canvas>
+        </div>
     </div>
 
 </div>
