--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -19,11 +19,13 @@
     <!-- Header Bar -->
     <div class="container-fluid">
         <div id="rowLogo" class="row">
-            <div id="navbar" class="col-xs-12">
-                <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
-                    <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
+            <a href="/Dashboard/Select">
+                <div id="navbar" class="col-xs-12">
+                    <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
+                        <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <!-- End Header Bar -->
         <!-- Navigation -->
@@ -39,7 +41,8 @@
                 </div>
 
                 <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
-                    <a href="/"><p id="CurrentUserText">Hello, <u>USER</u>. Log Out</p></a>
+                    <div class="col-xs-6 CurrentUserText">@ViewBag.CurrentProjectString</div>
+                    <a href="/" class="col-xs-6"><p class="CurrentUserText"><u>USER</u></p></a>
                 </div>
             </div>
 
