--- a/PCA/PCA/Views/Shared/_LayoutAdmin.cshtml
+++ b/PCA/PCA/Views/Shared/_LayoutAdmin.cshtml
@@ -8,6 +8,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/Layout.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Cabin" rel="stylesheet">
     @RenderSection("css", false)
 
 
@@ -18,18 +20,34 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-10 col-md-offset-1">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Navigation</div>
-                    <div class="panel-body">
-                        <a href="/Admin/Index">Admin</a>
-                    </div>
-                </div>
+        <div class="col-xs-12">
+            <br />
+            <a href="" class="btn btn-default col-xs-offset-1">Home</a>
+            <br />
+            <br />
+        </div>
+    </div>
+    <div class="row">
 
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Model Name
+        <div class="col-md-12">
+
+
+
+            <div class="col-md-10 col-md-offset-1">
+
+                <div class="panel panel-default panelShadow">
+                    <div class="panel-heading col-xs-12">
+                        <div class="headingElements col-xs-12">
+                            <div class="col-xs-4">
+                                <a href="@ViewBag.BackButtonLink" class="btn btn-default btn-sm">
+                                    <span class="glyphicon glyphicon-menu-left"></span> Back
+                                </a>
+                            </div>
+                            <div class="headingText col-xs-4">@ViewBag.AdminHeadingTitle</div>
+                            <div class="headingRight col-xs-4">
+                                @ViewBag.HeadingRight
+                            </div>
+                        </div>
                     </div>
                     <div class="panel-body">
                         @RenderBody()
