--- a/PCA/PCA/Views/Budget/Index.cshtml
+++ b/PCA/PCA/Views/Budget/Index.cshtml
@@ -40,11 +40,10 @@
         <div class="well col-xs-12">
             <div class="col-xs-12">
                 <div class="col-xs-4 text-center"></div>
-                <div class="col-xs-4"><b class="text-center col-xs-12">Budget Total: @ViewBag.budgetTotal.ToString("C")</b></div>
+                <div class="col-xs-4 text-center"><b class="text-center"><u>Budget Total</u><br />@ViewBag.budgetTotal.ToString("C")</b></div>
                 <div class="col-xs-4 text-center"></div>
+                <br /><br /><br />
             </div>
-            <br />
-            <br />
             <div class="col-xs-12 col-md-4 text-center"><u>Pending</u> <div class="text-center">@ViewBag.pendingTotal.ToString("C")</div></div>
             <div class="col-xs-12 col-md-4 text-center"><u>Reviewed</u> <div class="text-center">@ViewBag.reviewedTotal.ToString("C")</div></div>
             <div class="col-xs-12 col-md-4 text-center"><u>Approved</u> <div class="text-center">@ViewBag.approvedTotal.ToString("C")</div></div>
