--- a/PCA/PCA/Views/DailyReport/Detail.cshtml
+++ b/PCA/PCA/Views/DailyReport/Detail.cshtml
@@ -15,57 +15,48 @@
     <script src="~/Scripts/PCA.js"></script>
 }
 <div class="col-xs-12 col-md-8 col-md-offset-2">
+
     <div class="panel panel-default panelShadow">
         <div class="panel-heading col-xs-12">
             <div class="headingElements col-xs-12">
                 <div class="col-xs-4">
-                    <a href="/DailyReport/Index/" class="btn btn-default btn-sm">
+                    <a href="/DailyReport/Index" class="btn btn-default btn-sm">
                         <span class="glyphicon glyphicon-menu-left"></span> Back
                     </a>
                 </div>
-                <span class="headingText col-xs-4">Current Daily Report</span>
-            </div>
-        </div>
-
-        <div class="panel-body">
-            <div class="col-xs-12">
-                <div class="col-xs-6 DetailItem">
-                    <h5>Report Date:</h5>
-                    <p>@ViewBag.currentReportDate</p>
-                </div>
-                <div class="col-xs-6 DetailItem">
-                    <h5>
-                        Report Summary:
-                    </h5>
-                    <p>@ViewBag.currentReportSummary</p>
-                </div>
-            </div>
-
-
-
-
-        </div>
-    </div>
-
-    <div class="panel panel-default panelShadow">
-        <div class="panel-heading col-xs-12">
-            <div class="headingElements col-xs-12">
-                <div class="col-xs-4">
-                    <a href="/DailyReport/CreateWork/@ViewBag.currentReportId" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span> Create New</a>
-                </div>
                 <span class="headingText col-xs-4">Work Performed</span>
+                <div class="headingRight col-xs-4">
+                    <a href="/DailyReport/CreateWork/@ViewBag.currentReportId" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span> New</a>
+                </div>
             </div>
         </div>
 
         <div class="panel-body">
+
+            <br /><br /><br />
+
+            <div class="well col-xs-12">
+                <div class="col-xs-12">
+                    <div class="col-xs-6 DetailItem">
+                        <b>Report Date:</b>
+                        <p>@ViewBag.currentReportDate</p>
+                    </div>
+                    <div class="col-xs-6 DetailItem">
+                        <b>
+                            Report Summary:
+                        </b>
+                        <p>@ViewBag.currentReportSummary</p>
+                    </div>
+                </div>
+            </div>
 
             <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
-                <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-info-sign"></span> Information</a>
-                <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
-                <a id="LinkButton3" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+                <a id="LinkButton1" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-info-sign"></span> Information</a>
+                <a id="LinkButton2" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+                <a id="LinkButton3" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+                <hr />
             </div>
-
-
+            
 
 
             <table id="table_id" class="display">
