--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -14,6 +14,7 @@
     <script src="~/Scripts/PCA.js"></script>
 }
 
+@ViewBag.CurrentUserId
 <div class="panel panel-default panelShadow col-xs-12 col-md-7">
     <div class="panel-heading col-xs-12"><span class="heading-1">Work Flow</span>
     </div>
