--- a/PCA/PCA/Views/Report/Index.cshtml
+++ b/PCA/PCA/Views/Report/Index.cshtml
@@ -7,30 +7,54 @@
 {
     sideNavItemSelected
 }
+@section scripts
+{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
+    <script src="~/Scripts/PCA.js"></script>
+    <script src="~/Scripts/Report.js"></script>
+}
 
-
-<a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default">Back</a>
-<br />
-<br />
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4>Reports</h4>
-    </div>
-    <div class="panel-body">
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="reportDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Select Report...
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="reportDropDown">
-                <li><a href="/Report/BudgetDetail" target="_blank">Budget Detail</a></li>
-                <li><a href="#">Contract Detail</a></li>
-                <li><a href="#">Invoice Detail</a></li>
-                <li><a href="#">Paid Detail</a></li>
-                @*<li role="separator" class="divider"></li>*@
-
-            </ul>
+<!-- Report Container -->
+<div class="panel panel-default panelShadow col-xs-12 col-md-8 col-md-offset-2">
+    <!-- Report Header -->
+    <div class="panel-heading col-xs-12">
+        <div class="headingElements col-xs-12">
+            <div class="col-xs-4">
+                <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-menu-left"></span> Back
+                </a>
+            </div>
+            <span class="headingText col-xs-4">Reports</span>
         </div>
+    </div>
+
+    <div class="panel-body">
+
+        <br /><br /><br />
+        <div class="col-xs-12 col-md-10 col-md-offset-1 ">
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="reportDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <span id="ReportSelectText">Select Report...</span>
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="reportDropDown">
+                    <li><a class="ReportTypes">Budget Detail</a></li>
+                    <li><a class="ReportTypes">Invoice Detail</a></li>
+                    @*<li role="separator" class="divider"></li>*@
+                </ul>
+
+            </div>
+            <br />
+            <div id="ReportOptions" class="col-xs-12 well">
+
+            </div>
+            <div class="text-center">
+                <div class="btn btn-default btn-success">Generate Report</div>
+            </div>
+
+        </div>
+
+
+
     </div>
 </div>
