--- a/PCA/PCA/Views/Shared/_LayoutForm.cshtml
+++ b/PCA/PCA/Views/Shared/_LayoutForm.cshtml
@@ -8,8 +8,10 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
     <link href="~/Content/Layout.css" rel="stylesheet" />
+    
     @RenderSection("css", false)
 </head>
 <!-- End Head -->
@@ -92,7 +94,12 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
     <script src="~/Scripts/Layout.js"></script>
+    <script src="~/Scripts/PCA.js"></script>
+    
+    
+
 </body>
 </html>
