--- a/PCA/PCA/Views/DailyReport/Index.cshtml
+++ b/PCA/PCA/Views/DailyReport/Index.cshtml
@@ -12,7 +12,6 @@
 {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
     <script src="~/Scripts/DataTablesCustomization.js"></script>
-    <script src="~/Scripts/PCA.js"></script>
     <script src="~/Scripts/DailyReport.js"></script>
 }
 
@@ -22,7 +21,7 @@
     <div class="panel-heading col-xs-12">
         <div class="headingElements col-xs-12">
             <div class="col-xs-4">
-                <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-sm">
+                <a href="/DailyReport/Select" class="btn btn-default btn-sm">
                     <span class="glyphicon glyphicon-menu-left"></span> Back
                 </a>
             </div>
@@ -37,19 +36,16 @@
     <div class="panel-body col-xs-12">
 
         <!-- Filters -->
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle btn-sm" type="button" id="dailyReportDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Status: <span id="selection">All</span>
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li class="dailyReportStatusFilter"><a href="#">All</a></li>
-                <li class="dailyReportStatusFilter"><a href="#">Pending</a></li>
-                <li class="dailyReportStatusFilter"><a href="#">Approved</a></li>
-            </ul>
+        <div class="well col-xs-12">
+            <div class="col-xs-6">
+                Project:<br /> @ViewBag.currentProject
+            </div>
+            <div class="col-xs-6">
+                Status:<br /> @ViewBag.currentStatus
+            </div>
+            
         </div>
 
-        <hr />
 
         <!-- Link Buttons -->
         <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
@@ -94,15 +90,17 @@
     <div class="panel-heading col-xs-12">
         <div class="headingElements col-xs-12">
             <div class="col-xs-4"></div>
-                <span class="headingText col-xs-4">Data</span>
+                <span class="headingText col-xs-4">Pictures</span>
             </div>
     </div>
     <div class="panel-body">
+        @*
         <div class="col-xs-12 col-md-10 col-md-offset-1">
             <canvas id="dailyReportCanvas" width="400" height="400" data-weekreport-1="@ViewBag.DailyReportAnalWeekDay1"
                     data-weekreport-2="@ViewBag.DailyReportAnalWeekDay2" data-weekreport-3="@ViewBag.DailyReportAnalWeekDay3"
                     data-weekreport-4="@ViewBag.DailyReportAnalWeekDay4" data-weekreport-5="@ViewBag.DailyReportAnalWeekDay5"
                     data-weekreport-6="@ViewBag.DailyReportAnalWeekDay6" data-weekreport-7="@ViewBag.DailyReportAnalWeekDay7"></canvas>
         </div>
+        *@
     </div>
 </div>
