--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -7,6 +7,10 @@
 {
     sideNavItemSelected
 }
+@section css 
+{
+    <link href="~/Content/Dashboard.css" rel="stylesheet" />
+}
 @section scripts
 {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
@@ -14,61 +18,71 @@
     <script src="~/Scripts/PCA.js"></script>
 }
 
-@ViewBag.CurrentUserId
 <div class="panel panel-default panelShadow col-xs-12 col-md-7">
-    <div class="panel-heading col-xs-12"><span class="heading-1">Work Flow</span>
+    <div class="panel-heading col-xs-12">
+        <div class="headingElements">
+            <div class="col-xs-4"></div>
+            <div class="headingText col-xs-4">
+                <span>Workflow</span>
+            </div>
+        </div>
     </div>
 
     <div class="panel-body col-xs-12">
 
-        <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <!-- List group -->
-                <div class="panel-heading">Budgets</div>
-                    <ul class="list-group">
-                        <li class="list-group-item">Pending<span class="badge">@Model.BudgetPending</span></li>
-                        <li class="list-group-item">Approved<span class="badge">@Model.BudgetApproved</span></li>
-                    </ul>
+        <div class="table-responsive col-xs-12">
+            <h4><b>Budgets</b></h4>
+            <table class="table table-bordered">
+                <tbody>
+                    <tr>
+                        <td>Pending</td>
+                        <td>Approved</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="table-responsive col-xs-12">
+            <h4><b>Contracts</b></h4>
+            <table class="table table-bordered">
+                <tbody>
+                    <tr>
+                        <td>Pending</td>
+                        <td>Reviewed</td>
+                        <td>Approved</td>
+                        <td class="WorkflowSelected">Routed</td>
+                        <td>Posted</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="table-responsive col-xs-12">
+            <div class="table-responsive ">
+                <h4><b>Invoices</b></h4>
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td class="WorkflowSelected">Pending</td>
+                            <td>Approved</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
-        <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <!-- List group -->
-                <div class="panel-heading">Daily Reports</div>
-                <ul class="list-group">
-                    <a href="/DailyReport/"><li class="list-group-item">Pending<span class="badge">@Model.DailyReportPending</span></li></a>
-                    <li class="list-group-item">Approved<span class="badge">@Model.DailyReportApproved</span></li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <!-- List group -->
-                <div class="panel-heading">Contracts</div>
-                <ul class="list-group">
-                    <li class="list-group-item">CONTRACTS<span class="badge">0</span></li>
-                    <li class="list-group-item">PM REVIEW<span class="badge">14</span></li>
-                    <li class="list-group-item">APPROVE<span class="badge">14</span></li>
-                    <li class="list-group-item">ROUTING<span class="badge">14</span></li>
-                    <li class="list-group-item">POSTING<span class="badge">14</span></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <!-- List group -->
-                <div class="panel-heading">Invoices</div>
-                <ul class="list-group">
-                    <li class="list-group-item">RECONCILE<span class="badge">14</span></li>
-                    <li class="list-group-item">POST<span class="badge">14</span></li>
-                    <li class="list-group-item">PM REVIEW<span class="badge">14</span></li>
-                    <li class="list-group-item">APPROVE<span class="badge">14</span></li>
-                    <li class="list-group-item">LIEN RELEASE<span class="badge">14</span></li>
-                    <li class="list-group-item">PAID POST<span class="badge">14</span></li>
-                </ul>
+        <div class="table-responsive col-xs-12">
+            <div class="table-responsive">
+                <h4><b>Daily Reports</b></h4>
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td>Pending</td>
+                            <td class="WorkflowSelected">Approved</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -89,6 +103,6 @@
         <h4>Change Log</h4>
     </div>
     <div class="panel-body">
-        
+
     </div>
 </div>
