--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link href="~/Content/Layout.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Cabin" rel="stylesheet">
     @RenderSection("css", false)
@@ -16,78 +17,67 @@
 <!-- End Head -->
 <!-- Body -->
 <body>
-    <!-- Header Bar -->
-    <div class="container-fluid">
-        <div id="rowLogo" class="row">
-            <a href="/Dashboard/Select">
-                <div id="navbar" class="col-xs-12">
-                    <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
-                        <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
+    <div class="container-fluid backdrop">
+
+
+        <!-- Header Bar -->
+        <div class="container-fluid main">
+            <div id="rowLogo" class="row">
+                <a href="/Dashboard/Select">
+                    <div id="navbar" class="col-xs-12">
+                        <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
+                            <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- End Header Bar -->
+            <!-- Navigation -->
+            <div class="row">
+                <div id="Navigation" class="col-xs-12">
+                    <div id="NavigationLinks" class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-xl-4">
+                        <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">Dashboard</span></a>
+                        <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">Contracts</span></a>
+                        <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">Budgets</span></a>
+                        <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">Invoices</span></a>
+                        <a href="/DailyReport/Select"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">Daily Reports</span></a>
+                        <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">Reports</span></a>
+                    </div>
+
+                    <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
+                        <div class="col-xs-6 CurrentUserText">@ViewBag.CurrentProjectString</div>
+                        <a href="/" class="col-xs-6"><p class="CurrentUserText"><u>USER</u></p></a>
                     </div>
                 </div>
-            </a>
-        </div>
-        <!-- End Header Bar -->
-        <!-- Navigation -->
-        <div class="row">
-            <div id="Navigation" class="col-xs-12">
-                <div id="NavigationLinks" class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-xl-4">
-                    <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">Dashboard</span></a>
-                    <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">Contracts</span></a>
-                    <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">Budgets</span></a>
-                    <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">Invoices</span></a>
-                    <a href="/DailyReport/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">Daily Reports</span></a>
-                    <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">Reports</span></a>
+
+
+            </div>
+
+            <div id="BodyContainer" class="container-fluid">
+                <div id="ContentRow" class="row">
+                    <div id="Body" class="col-xs-12">
+                        @RenderBody()
+                    </div>
                 </div>
 
-                <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
-                    <div class="col-xs-6 CurrentUserText">@ViewBag.CurrentProjectString</div>
-                    <a href="/" class="col-xs-6"><p class="CurrentUserText"><u>USER</u></p></a>
+                <!-- End Body -->
+                <!-- Footer -->
+                <div class="row">
+                    <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
                 </div>
             </div>
 
 
+
         </div>
-
-        <div id="BodyContainer" class="container-fluid">
-            <div id="ContentRow" class="row">
-                <div id="Body" class="col-xs-12">
-                    @RenderBody()
-                </div>
-            </div>
-
-            <!-- End Body -->
-            <!-- Footer -->
-            <div class="row">
-                <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
-            </div>
-        </div>
-
-            
-            
-        </div>
-
-    <!--
-        <div class="row">
-            <a href="/Dashboard/Select">
-                <div id="Footer" class="col-xs-12">
-                    <p id="CurrentProjectText">
-                        @if (@ViewBag.CurrentProjectNumber == null)
-                        {
-                            <span>No Project Selected.</span>
-                        }
-                        else
-                        {
-                        @ViewBag.CurrentProjectString
-                    }</p>
-                </div>
-            </a>
-        </div>-->
+    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
     <script src="~/Scripts/Layout.js"></script>
+    <script src="~/Scripts/PCA.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
