--- a/PCA/PCA/Views/DailyReport/Index.cshtml
+++ b/PCA/PCA/Views/DailyReport/Index.cshtml
@@ -20,14 +20,14 @@
     <!-- Daily Report Header -->
     <div class="panel-heading col-xs-12">
         <div class="headingElements col-xs-12">
-            <div class="col-xs-4">
-                <a href="/DailyReport/Select" class="btn btn-default btn-sm">
+            <div class="col-xs-4 headingLeft">
+                <a href="/DailyReport/Select" class="btn btn-default btn-xs">
                     <span class="glyphicon glyphicon-menu-left"></span> Back
                 </a>
             </div>
             <span class="headingText col-xs-4">Daily Reports</span>
             <div class="headingRight col-xs-4">
-                <a href="/DailyReport/Create" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span> New</a>
+                <a href="/DailyReport/Create" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-plus"></span> New</a>
             </div>
         </div>
     </div>
