--- a/PCA/PCA/Content/Layout117.css
+++ b/PCA/PCA/Content/Layout117.css
@@ -6,20 +6,11 @@
     height: 100vh;
 }
 
-.panel > .panel-heading{
+.panel-heading{
     padding-top: 5px;
     padding-bottom: 8px;
     padding-left: 0px;
     padding-right: 0px;
-    background-color: #1c2541;
-    color: white;
-    font-size: 0.7em;
-    height: 50px;
-    padding-top: 15px;
-}
-
-.panel > .panel-heading:hover{
-    background-color: #0b132b;
 }
 
 .backdrop {
@@ -34,6 +25,7 @@
     border-right: solid 3px #666;
     height: 100vh;
     background-repeat: repeat;
+    background-image: url('Images/whiteblue.gif');
     background-color: #eee;
     box-shadow: 0px 0px 20px 15px rgba(0, 0, 0, 0.7);
 
@@ -200,7 +192,7 @@
 }
 
 #Body{
-    margin-top: 2%;
+    margin-top: 3%;
 }
 
 .sideNavItemSelected{
@@ -304,8 +296,8 @@
 }
 
 #BodyContainer{
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
     padding: 0px;
 }
 
