--- a/PCA/PCA/Views/Shared/Layout117.cshtml
+++ b/PCA/PCA/Views/Shared/Layout117.cshtml
@@ -33,6 +33,26 @@
             </div>
             <!-- End Header Bar -->
             <!-- Navigation -->
+            <div class="row">
+                <div id="Navigation" class="col-xs-12">
+                    <div id="NavigationLinks" class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-xl-4">
+                        <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">Dashboard</span></a>
+                        <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">Contracts</span></a>
+                        <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">Budgets</span></a>
+                        <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">Invoices</span></a>
+                        <a href="/DailyReport/Select"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">Daily Reports</span></a>
+                        <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">Reports</span></a>
+                    </div>
+
+                    <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
+                        <div class="col-xs-6 CurrentUserText">@ViewBag.CurrentProjectString</div>
+                        <a href="/" class="col-xs-6"><p class="CurrentUserText"><u>USER</u></p></a>
+                    </div>
+                </div>
+
+
+            </div>
+
             <div id="BodyContainer" class="container-fluid">
                 <div id="ContentRow" class="row">
                     <div id="Body" class="col-xs-12">
