--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -183,8 +183,8 @@
                 <div class="col-md-12">
                     <ul class="list-group">
                         <li class="list-group-item workflow-link" data-workflow-status="Pending">Pending</li>
-                        <li class="list-group-item list-group-item-success">Reviewed</li>
-                        <li class="list-group-item">Approved</li>
+                        <li class="list-group-item workflow-link" data-workflow-status="Reviewed">Reviewed</li>
+                        <li class="list-group-item workflow-link" data-workflow-status="Approved">Approved</li>
                     </ul>
                 </div>
 
